# TTS.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: vulkan-backend-status.md  vulkan-optimization-research.md
examples/cli/: README.md  cli.cpp
examples/quantize/: README.md  quantize.cpp  quantize_impl.cpp  quantize_impl.h
examples/server/: README.md  server.cpp
ggml-patches/: ggml-iterator.h  latest-ggml-parler.patch
include/: common.h  tts_style_bert_vits2_c_api.h
py-gguf/: README.md  convert_style_bert_vits2_jp_bert_to_gguf  convert_style_bert_vits2_to_gguf
py-gguf/tts_encoders/: __init__.py  dac_gguf_encoder.py  parler_tts_gguf_encoder.py  style_bert_vits2_gguf_encoder.py  style_bert_vits2_jp_bert_gguf_encoder.py  t5_encoder_gguf_encoder.py
src/: CMakeLists.txt  sampler.cpp  sampler.h  style_bert_vits2_c_api.cpp  tts_model.cpp  tts_model.h  util.cpp  util.h
src/decoder/: dac_model.cpp  dac_model.h  general_neural_audio_codec.cpp  general_neural_audio_codec.h  snac_model.cpp
src/models/: CMakeLists.txt  loaders.cpp
src/models/dia/: model.cpp
src/models/kokoro/: loader.cpp  model.cpp  model.h
src/models/orpheus/: model.cpp
src/models/parler/: model.cpp  model.h
src/models/parler/t5/: model.cpp  model.h
src/models/style_bert_vits2/: loader.cpp  model.cpp  model.h
src/models/style_bert_vits2_jp_bert/: loader.cpp  model.cpp  model.h
tests/: CMakeLists.txt  dia_cfg_scale.cpp  kokoro_adain_snake_1d.cpp  kokoro_conv_1d.cpp  kokoro_conv_1d_bench.cpp  kokoro_lstm_scan.cpp  kokoro_lstm_step.cpp  kokoro_snake_1d.cpp  model_buffer_alignment.cpp  style_bert_vits2_alignment_fixture.cpp  style_bert_vits2_decoder_backend_compare.cpp  style_bert_vits2_decoder_fixture.cpp  style_bert_vits2_decoder_latent_fixture.cpp  style_bert_vits2_duration_predictor_fixture.cpp  style_bert_vits2_flow_fixture.cpp  style_bert_vits2_jp_bert_feature_fixture.cpp  style_bert_vits2_jp_bert_loader_fixture.cpp  style_bert_vits2_prior_sample_fixture.cpp  style_bert_vits2_sdp_condition_fixture.cpp  style_bert_vits2_sdp_reverse_fixture.cpp  style_bert_vits2_speaker_embedding_fixture.cpp  style_bert_vits2_style_vector_fixture.cpp  style_bert_vits2_text_encoder_attention_fixture.cpp  style_bert_vits2_text_encoder_ffn_fixture.cpp  style_bert_vits2_text_encoder_fixture.cpp  style_bert_vits2_text_encoder_input_fixture.cpp  style_bert_vits2_text_encoder_layer_fixture.cpp  style_bert_vits2_text_encoder_projection_fixture.cpp  style_bert_vits2_text_encoder_stack_fixture.cpp  vulkan_conv_1d.cpp  vulkan_conv_transpose_1d.cpp  vulkan_im2col.cpp  vulkan_transpose_cont_2d.cpp
