target_sources(tts PRIVATE
        loaders.cpp
        loaders.h
)

set(TTS_BUILD_KOKORO_DEFAULT ON)
get_target_property(TTS_GGML_SOURCE_DIR ggml SOURCE_DIR)
set(TTS_GGML_HEADER_PATH "")
if (TTS_GGML_SOURCE_DIR AND EXISTS "${TTS_GGML_SOURCE_DIR}/include/ggml.h")
        set(TTS_GGML_HEADER_PATH "${TTS_GGML_SOURCE_DIR}/include/ggml.h")
elseif (TTS_GGML_SOURCE_DIR AND EXISTS "${TTS_GGML_SOURCE_DIR}/../include/ggml.h")
        get_filename_component(TTS_GGML_PARENT_SOURCE_DIR "${TTS_GGML_SOURCE_DIR}/.." ABSOLUTE)
        set(TTS_GGML_HEADER_PATH "${TTS_GGML_PARENT_SOURCE_DIR}/include/ggml.h")
endif()
if (TTS_GGML_HEADER_PATH)
        file(READ "${TTS_GGML_HEADER_PATH}" TTS_GGML_HEADER)
        if (NOT TTS_GGML_HEADER MATCHES "ggml_kokoro_lstm_scan")
                set(TTS_BUILD_KOKORO_DEFAULT OFF)
        endif()
endif()

option(TTS_BUILD_KOKORO "TTS.cpp: build Kokoro support" ${TTS_BUILD_KOKORO_DEFAULT})
if (TTS_BUILD_KOKORO AND TTS_GGML_HEADER AND NOT TTS_GGML_HEADER MATCHES "ggml_kokoro_lstm_scan")
        message(FATAL_ERROR "TTS_BUILD_KOKORO requires the TTS.cpp ggml custom ops. Use -DTTS_BUILD_KOKORO=OFF with upstream/latest ggml.")
endif()
target_compile_definitions(tts PRIVATE TTS_BUILD_KOKORO=$<BOOL:${TTS_BUILD_KOKORO}>)

add_subdirectory(dia)
add_subdirectory(dummy)
if (TTS_BUILD_KOKORO)
        add_subdirectory(kokoro)
endif()
add_subdirectory(orpheus)
add_subdirectory(parler)
add_subdirectory(style_bert_vits2)
add_subdirectory(style_bert_vits2_jp_bert)
